[gd_scene load_steps=2 format=3 uid="uid://dwrw4mrmxttyv"]

[ext_resource type="Script" uid="uid://dxvu455yhq5wk" path="res://attribute_slider.gd" id="1_vjs5l"]

[node name="AttributeSlider" type="VBoxContainer"]
theme_override_constants/separation = 0
script = ExtResource("1_vjs5l")
attribute = "Attribute"
value = 1.0

[node name="AttributeLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Attribute"

[node name="ValueLabel" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "1.0"

[node name="HSlider" type="HSlider" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
value = 1.0

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
